feat(sample): update salary type to BigDecimal and adjust related tests